# dmiconv

./: .travis.yml  CMakeLists.txt  README.md  build.sh
include/: dmiconv.h
test/: dmiconvtest.cpp
